--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -102,6 +102,7 @@
                     <ul>
                         <li><a href="{% url 'moderation_log' %}">Moderation Log</a></li>
                         <li><a href="{% url 'about' %}">About</a></li>
+                        <li><a href="{% url 'help' %}">Help</a></li>
                         <li>{% cache 21600 build_sha %}{% build_sha %}{% endcache %}</li>
                     </ul>
                 </nav>
