--- a/sic/templates/about/about.html
+++ b/sic/templates/about/about.html
@@ -4,6 +4,11 @@
 {% block title %}about sic{% endblock %}
 {% block style %}
     <link rel="stylesheet" href="/static/flair.css">
+    <style>
+        h2 {
+            margin-bottom:0;
+        }
+    </style>
 {% endblock %}
 {% block content %}
 
@@ -32,16 +37,28 @@
         </div>
     </div>
     <h1>about <strong><code>[sic]</code></strong></h1>
+    <p><strong><code>[sic]</code></strong> is a community about everything that piques your curiosity and interest.</p>
+    <h2>documentation and policies</h2>
     <nav class="menu">
         <ul>
+            <li><a href="{% url 'help' %}">Help / How to use the website</a></li>
             <li><a href="{% url 'purpose' %}">Statement of Purpose</a></li>
             <li><a href="{% url 'code_of_conduct' %}">Community Code of Conduct</a></li>
-            <li><a href="{% url 'about_contact' %}">Contact</a></li>
             <li><a href="{% url 'about_privacy' %}">Privacy Policy</a></li>
-            <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
-            <li>IRC Channel: <code>#sic</code> on <a href="https://libera.chat/" rel="external nofollow">Libera Chat</a>, connect with an IRC client at <a href="ircs://irc.libera.chat:6697" rel="external nofollow"><code>ircs://irc.libera.chat:6697</code></a>, use a <a href="https://web.libera.chat/?channel=#sic">webclient</a> or the <a href="https://app.element.io/#/room/#sic:libera.chat" rel="external nofollow">Matrix bridge</a>.</li>
-            <li>tor hidden service <a href="http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/">http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/</a></li>
-            <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
+            <li><a href="{% url 'about_contact' %}">Contact</a></li>
         </ul>
     </nav>
+    <h2>community and contributors</h2>
+    <nav class="menu">
+        <ul>
+            <li><a href="{% url 'invitation_tree' %}">User invitation tree</a></li>
+            <li>IRC Channel: <code>#sic</code> on <a href="https://libera.chat/" rel="external nofollow">Libera Chat</a>, connect with an IRC client at <a href="ircs://irc.libera.chat:6697" rel="external nofollow"><code>ircs://irc.libera.chat:6697</code></a>, use a <a href="https://web.libera.chat/?channel=#sic">webclient</a> or the <a href="https://app.element.io/#/room/#sic:libera.chat" rel="external nofollow">Matrix bridge</a>.</li>
+        </nav>
+        <h2>links</h2>
+        <nav class="menu">
+            <ul>
+                <li>tor hidden service <a href="http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/">http://sicpm3hp7dtrwhmf4qlelycqlvie6flqa5qnjnt3snok5xydvxhs4xyd.onion/</a></li>
+                <li>Source code: <a href="https://github.com/epilys/sic/">https://github.com/epilys/sic/</a></li>
+            </ul>
+        </nav>
 {% endblock %}
