--- a/sic/static/style.css
+++ b/sic/static/style.css
@@ -43,7 +43,7 @@ main {
 
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
+  margin: 0.67em 0 0 0;
 }
 
 /* Grouping content
@@ -436,7 +436,6 @@ body > main nav > ul > li > a {
   border-radius: 3px;
   max-width: var(--main-width);
   word-wrap: break-word;
-  margin-top: 4px;
   margin-bottom: 4px;
   display: inline-block;
 }
@@ -1344,8 +1343,8 @@ blockquote.message_body {
 @media (max-width: 600px) {
   body>header>div.logo a {
     font-size: 70%;
-    padding: 2px;
-    padding-bottom: 3px;
+    padding: 3px;
+    padding-bottom: 4px;
   }
   body>header {
     font-size: 90%;
