Add cached_property decorator to slugify fns

--- a/sic/templates/tags/browse_aggs.html
+++ b/sic/templates/tags/browse_aggs.html
@@ -83,12 +83,12 @@
         <div class="aggregations">
             {% for agg in aggs %}
                 <article>
-                    <header><a href="{% url 'taggregation' agg.pk agg.slugify %}" class="agg-name">{{ agg.name }}</a> {{ agg.tags.count }} tag{{ agg.tags.count|pluralize}}</header>
+                    <header><a href="{% url 'taggregation' agg.pk agg.slugify %}" class="agg-name">{{ agg.name }}</a> {{ agg.vertices|length }} tag{{ agg.vertices|pluralize}}</header>
                     <span>{{ agg.subscribers.count }} subscribers</span>
                     <span class="sparklines" title="activity for last 14 days">{{ agg.last_14_days }}</span>
                     <span class="description">{% if agg.description %}{{ agg.description }}{% else %}No description{% endif %}</span>
                     <ul class="tags">
-                        {% for tag in agg.tags.all %}
+                        {% for tag in agg.vertices %}
                             <li style="{% if show_colors %}{{ tag.color_vars_css }}{% endif %}"><div class="tag"><span class="tag-name"><a href="{{ tag.get_absolute_url }}">{{ tag.name }} {{ tag.stories.count }}</a></span></div></li>
                         {% endfor %}
                     </ul>
