--- a/sic/templates/account/password_change.html
+++ b/sic/templates/account/password_change.html
@@ -3,12 +3,14 @@
 {% block content %}
     <h2>Password Reset</h2>
     {% if user.is_authenticated %}
-        <form method="post">
+        <form class="submit-story-form" method="POST">
             {% csrf_token %}
             <table>
                 {{ form }}
             </table>
-            <input type="submit" value="update password">
+            <div class="button-flex-box">
+                <input type="submit" value="update password">
+            </div>
             {% if next %}
                 <input type="hidden" name="next" value="{{ next }}">
             {% endif %}
