--- a/sic/templates/tags/browse_aggs.html
+++ b/sic/templates/tags/browse_aggs.html
@@ -41,7 +41,7 @@
             margin: 0;
         }
         div.aggregations>article .created {
-            font-size: 74%;
+            font-size: small;
             text-align: center;
             width: 100%;
             align-self: end;
