--- a/sic/templates/base.html
+++ b/sic/templates/base.html
@@ -64,7 +64,7 @@
                 {% if request.user.is_authenticated %}
                     <nav class="menu user">
                         <ul>
-                            <li class="profile">{% if request.user.avatar and show_avatars %}<img class="avatar-small" src="{{request.user.avatar}}" alt="user avatar" title="{{ request.user.avatar_title|default_if_none:'' }}" height="18" width="18">{% endif %}<a href="{{ request.user.get_absolute_url }}">{{ request.user }}</a></li>
+                            <li class="profile">{% if request.user.avatar and show_avatars %}<img class="avatar-small" src="{{request.user.avatar}}" alt="" title="{{ request.user.avatar_title|default_if_none:'' }}" height="18" width="18">{% endif %}<a href="{{ request.user.get_absolute_url }}">{{ request.user }}</a></li>
                             {% with request.user.active_notifications as notifications %}
                                 {% if notifications|length > 0 %}
                                     <li class="notification"><a href="{% url 'notifications' %}">{{ notifications|length }} notification{{ notifications|pluralize }}</a></li>
